[package]
name = "pias"
version = "0.1.0"
edition = "2018"
description = "Partially-identical aggregate signatures with re-randomizability"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bls12_381 = "0.5.0"
lazy_static = "1.4.0"
wedpr_l_crypto_hash_sha3 = "1.0.0"
wedpr_l_utils = "1.1.0"
ff = "0.10"
group = "0.10"
rand = "0.8"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "pias"
harness = false